# cv-harris-detector

./: Cargo.toml
cv-harris-detector/: Cargo.toml  README.md
cv-harris-detector/src/: chessboard_detector.rs  chessboard_filtering.rs  common.rs  harris_detector.rs  lib.rs  main.rs
cv-harris-detector/test_images/example1/: calib_data.txt
cv-harris-detector/test_images/example2/: calib_data.mat  calib_data.txt
cv-harris-detector/test_images/example3/: calib_data.mat  calib_data.txt
